--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,41 +1,211 @@
+.light {
+  --md-sys-color-primary: rgb(125 87 14);
+  --md-sys-color-surface-tint: rgb(125 87 14);
+  --md-sys-color-on-primary: rgb(255 255 255);
+  --md-sys-color-primary-container: rgb(255 222 174);
+  --md-sys-color-on-primary-container: rgb(40 25 0);
+  --md-sys-color-secondary: rgb(110 91 64);
+  --md-sys-color-on-secondary: rgb(255 255 255);
+  --md-sys-color-secondary-container: rgb(249 223 187);
+  --md-sys-color-on-secondary-container: rgb(38 25 4);
+  --md-sys-color-tertiary: rgb(79 100 66);
+  --md-sys-color-on-tertiary: rgb(255 255 255);
+  --md-sys-color-tertiary-container: rgb(209 234 190);
+  --md-sys-color-on-tertiary-container: rgb(13 32 5);
+  --md-sys-color-error: rgb(186 26 26);
+  --md-sys-color-on-error: rgb(255 255 255);
+  --md-sys-color-error-container: rgb(255 218 214);
+  --md-sys-color-on-error-container: rgb(65 0 2);
+  --md-sys-color-background: rgb(255 248 243);
+  --md-sys-color-on-background: rgb(32 27 19);
+  --md-sys-color-surface: rgb(255 248 243);
+  --md-sys-color-on-surface: rgb(32 27 19);
+  --md-sys-color-surface-variant: rgb(239 224 207);
+  --md-sys-color-on-surface-variant: rgb(79 69 57);
+  --md-sys-color-outline: rgb(128 117 103);
+  --md-sys-color-outline-variant: rgb(210 196 180);
+  --md-sys-color-shadow: rgb(0 0 0);
+  --md-sys-color-scrim: rgb(0 0 0);
+  --md-sys-color-inverse-surface: rgb(54 47 39);
+  --md-sys-color-inverse-on-surface: rgb(251 239 226);
+  --md-sys-color-inverse-primary: rgb(241 190 109);
+  --md-sys-color-primary-fixed: rgb(255 222 174);
+  --md-sys-color-on-primary-fixed: rgb(40 25 0);
+  --md-sys-color-primary-fixed-dim: rgb(241 190 109);
+  --md-sys-color-on-primary-fixed-variant: rgb(96 65 0);
+  --md-sys-color-secondary-fixed: rgb(249 223 187);
+  --md-sys-color-on-secondary-fixed: rgb(38 25 4);
+  --md-sys-color-secondary-fixed-dim: rgb(220 195 161);
+  --md-sys-color-on-secondary-fixed-variant: rgb(85 68 42);
+  --md-sys-color-tertiary-fixed: rgb(209 234 190);
+  --md-sys-color-on-tertiary-fixed: rgb(13 32 5);
+  --md-sys-color-tertiary-fixed-dim: rgb(182 206 164);
+  --md-sys-color-on-tertiary-fixed-variant: rgb(56 76 44);
+  --md-sys-color-surface-dim: rgb(228 216 204);
+  --md-sys-color-surface-bright: rgb(255 248 243);
+  --md-sys-color-surface-container-lowest: rgb(255 255 255);
+  --md-sys-color-surface-container-low: rgb(254 242 229);
+  --md-sys-color-surface-container: rgb(248 236 223);
+  --md-sys-color-surface-container-high: rgb(242 230 218);
+  --md-sys-color-surface-container-highest: rgb(236 225 212);
+}
+
 body {
   margin: 0;
   padding: 0;
+  font-family: Arial, Helvetica, sans-serif;
 }
-div {
+.container {
   display: grid;
+  grid-template-rows: 1fr;
+  grid-template-columns: auto auto 1fr auto;
   grid-template-areas:
     "nav"
     "aside"
     "main"
+    "pgnum"
     "footer";
 }
 nav {
   grid-area: nav;
-  background-color: aqua;
-  padding: 10px;
+  padding: 0px;
+  max-height: 60px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  border: solid black;
+  align-items: center;
+  background-color: var(--md-sys-color-primary);
+  color: var(--md-sys-color-on-primary);
+  padding-left: 10px;
+  padding-right: 10px;
 }
-section {
+nav svg {
+  fill: var(--md-sys-color-on-primary);
+  height: 50px;
+}
+nav a {
+  display: none;
+}
+aside {
   grid-area: aside;
-  background-color: brown;
-  border: solid black;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+  background-color: var(--md-sys-color-secondary-container);
+  color: var(--md-sys-color-on-secondary-container);
+}
+main {
+  grid-area: main;
+  background-color: var(--md-sys-color-secondary);
+}
+aside select {
+  width: 100%;
+}
+.item,
+.item2 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 30px;
+  padding: 10px;
+  background-color: var(--md-sys-color-secondary-container);
+  color: var(--md-sys-color-on-secondary-container);
+}
+.item h1,
+.item2 h1 {
+  text-align: center;
+  font-weight: lighter;
+  font-size: medium;
+}
+.item img,
+.item button {
+  width: 100%;
+}
+.item2 {
+  display: none;
+}
+footer {
+  grid-area: footer;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--md-sys-color-primary);
+  color: var(--md-sys-color-on-primary);
+}
+footer ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
-item {
-  grid-area: item;
+footer button {
+  margin: 30px 30px;
 }
-main {
-  grid-area: main;
-  background-color: blue;
+.pgnum {
+  grid-area: pgnum;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  padding: 10px 50px;
+  align-items: center;
+  background-color: var(--md-sys-color-secondary);
 }
-footer {
-  grid-area: footer;
-  background-color: red;
+.pgnum a {
+  color: var(--md-sys-color-on-secondary);
+  border: solid 1px;
+  padding: 5px;
+}
+
+@media (min-width: 576px) {
+  .container {
+    grid-template-areas:
+      "nav aside"
+      "nav main"
+      "nav pgnum"
+      "nav footer";
+    grid-template-columns: 1fr 4fr;
+  }
+  nav svg {
+    display: none;
+  }
+  nav {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    max-height: 1000vh;
+  }
+  nav a {
+    display: block;
+  }
+  nav p {
+    font-weight: bolder;
+    font-size: xx-large;
+  }
+  .item2 {
+    display: flex;
+  }
+
+  main {
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    grid-template-rows: auto auto auto auto;
+  }
+  .item2 img,
+  .item2 button {
+    width: 100%;
+  }
+  footer {
+    background-color: var(--md-sys-color-tertiary);
+    color: var(--md-sys-color-on-tertiary);
+  }
+  .pgnum {
+    justify-content: center;
+  }
 }
